# pytorch-emotion-detector

./: .gitignore  config.py  custom_cnn.py  dataset.sh  eda.ipynb  generate_transfer_plots.py  main_.ipynb  poster.tex  preprocess.py  pyproject.toml
context/: pdf_extract.txt  pdf_extract2.txt
